[New] 2.Add Two Numbers-两数相加

--- a/LeetCode/1.Two Sum-两数之和/1.Two Sum-两数之和.md
+++ b/LeetCode/1.Two Sum-两数之和/1.Two Sum-两数之和.md
@@ -14,6 +14,11 @@ Given an array of integers nums and an integer target, return indices of the tw
 > 
 Example:
 ```
+Input: nums = [2,7,11,15], target = 9
+Output: [0,1]
+Output: Because nums[0] + nums[1] == 9, we return [0, 1].
+```
+```
 给定 nums = [2, 7, 11, 15], target = 9
 因为 nums[0] + nums[1] = 2 + 7 = 9
 所以返回 [0, 1]
